<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".signup.SignupActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/full_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_name">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_name"
                    android:layout_marginTop="8dp"
                    android:hint="@string/email_id"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <!--<Spinner
                android:id="@+id/prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_email">

            </Spinner>-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_email">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_email"
                    android:layout_marginTop="8dp"
                    android:hint="@string/phone_no"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLength="10" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_phone">
               <!-- <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
-->
                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />
                   <!-- <CheckBox
                        android:id="@+id/cbShowPwd"
                        android:layout_below="@+id/pass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="show password"
                        android:textColor="#B7C4C5"
                        android:textAppearance="?android:textAppearanceSmall"/>
                </RelativeLayout>-->
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_confrmpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_pass">

                <EditText
                    android:id="@+id/confrm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/layout_pass"
                    android:layout_marginTop="8dp"
                    android:hint="@string/conf_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>


            <RadioGroup
                android:id="@+id/level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_confrmpass"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/r1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/fresher" />

                <RadioButton
                    android:id="@+id/r2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/experience" />


            </RadioGroup>


            <LinearLayout
                android:id="@+id/row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/level">

                <CheckBox
                    android:id="@+id/agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:text="I Agree the"
                    android:textColor="#000"
                    android:textAppearance="?android:textAppearanceSmall"/>

                <TextView
                    android:id="@+id/term"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:text="Terms &amp; Conditions"
                    android:textColor="@color/junDark"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceSmall"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:text="of Udyomitra."
                    android:textColor="#000"
                    android:textAppearance="?android:textAppearanceSmall"/>

            </LinearLayout>


            <Button
                android:id="@+id/sign_up"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/row"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@drawable/signin_border"
                android:text="@string/let_start"
                android:textColor="@android:color/white" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
